tsx to functional / APp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -416,11 +416,11 @@
   /**
    * The font size
    */
-  "editor.fontSize": 15
+  "editor.fontSize": 17,
   /**
    * The line height
    */
-  // "editor.lineHeight": 18,
+  "editor.lineHeight": 22
   /**
    * The letter spacing
    */
